# tvnamer

./: .gitignore  README.md  pyproject.toml
tests/: test_movingfiles.py
tvnamer/: cliarg_parser.py  config.py  config_defaults.py  data.py  database.py  files.py  main.py  utils.py
