[project]
name = "tvnamer"
dynamic = ["version"]
description = "Automatic TV episode namer"
readme = "README.md"
license = "unlicense"
authors = [
    { name = "dbr/Ben" },
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Topic :: Multimedia",
    "Topic :: Utilities",
]
dependencies = [
    "tvdb_api @ git+ssh://git@github.com/isaactolstoi2/tvdb_api.git",
    "sqlalchemy",
]

[project.scripts]
tvnamer = "tvnamer.main:main"

[project.urls]
Homepage = "http://github.com/dbr/tvnamer"



